--- a/assets_m/_manifest.json
+++ b/assets_m/_manifest.json
@@ -2,9 +2,9 @@
 "version": "1.0",
 "lang" : "en",
 "name" : "PayApp",
-"scope" : "http://localhost/v101/",
+"scope" : "http://localhost/arsippertanahan/login/login_mobile",
 "display" : "fullscreen",
-"start_url" : "http://localhost/v101/index-waves.html",
+"start_url" : "http://localhost/arsippertanahan/login/login_mobile",
 "short_name" : "PayApp",
 "description" : "",
 "orientation" : "portrait",
